# ExPenis

./: .dockerignore  .env.dev  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  TEST_PR.md  app.py  docker-compose.yml  env.prod.js  generate_openapi.py  justfile  main.py  pyproject.toml
.github/workflows/: release.yml
alpine/: env.js  index.html  index.js
bot/: __init__.py  bot.py  bot_config.py  keyboards.py  messages.py
bot/components/: account_edit.py  account_screen.py  account_selector.py  button.py  category_screen.py  category_selector.py  check_box.py  component.py  daily_screen.py  delete_dialog.py  input.py  main_menu.py  navigation_arrows.py  panel.py  statistics_view.py  transaction_detail_view.py  transaction_edit.py  transaction_screen.py
bot/screens/: account_selection.py  add_acount.py  back_handler.py  category_selection.py  check_box.py  main.py  main_screen.py  money_input.py  periods.py  screen.py  transaction_screen.py  transaction_type_selection.py  transaction_view.py  unified_main_screen.py
core/: config.py  database.py  helpers.py
core/models/: __init__.py  account.py  category.py  database.py  transaction.py
core/service/: __init__.py  account_service.py  category_service.py  (+1 more)
docs/: openapi.json
flutter_web/: flutter_bootstrap.js  index.html  main.dart.js  version.json
frontend/: .gitignore  AGENTS.md  pubspec.yaml
migrations/: 001_create_transactions_categories_account_tables.sql  001_create_transactions_table.sql  002_create_categories_table.sql  002_create_session_table.sql  003_create_accounts_table.sql  003_currency_column.sql  004_tags.sql  005_create_users.sql  006_account_soft_delete.sql
nginx/: nginx.conf
systemd/: expenis  expenis-backup.service  expenis-backup.timer  expenis-server.service  expenis.service
tests/: auth_service_test.py  conftest.py  session_service_test.py  test_account_service.py  test_category_service.py  transaction_service_test.py
ui/: dashboard.py
(+76 files in other folders)
