[project]
name = "expenis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "sqlalchemy[asyncio]>=2.0.43",
    "tabulate>=0.9.0",
]
