[project]
name = "expenis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "altair>=6.0.0",
    "authx>=1.5.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "hvplot>=0.12.2",
    "mypy>=1.19.1",
    "panel>=1.8.7",
    "peewee",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "tabulate>=0.9.0",
    "tuican",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
]

[tool.uv.sources]
tuican = { path = "../TUIcan", editable = true }
peewee = { git = "https://github.com/coleifer/peewee" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
